prusti-tests/tests/verify/ui/invalid-precondition-weakening.stderr
error: [Prusti: verification error] the method's precondition may not be a valid weakening of the trait's precondition.
  --> $DIR/invalid-precondition-weakening.rs:4:16
   |
4  |     #[requires(x > 10)]
   |                ^^^^^^
5  |     #[requires(y > 15)]
   |                ^^^^^^
...
15 |     #[requires(x > 15)]
   |                ^^^^^^
16 |     #[requires(y > 20)]
   |                ^^^^^^
   |
   = help: The trait's precondition should imply the implemented method's precondition.

error: aborting due to previous error

